# remind

./: .gitignore  go.mod  go.sum
ai-service/: .gitignore  config.py  (+5 more)
deepsearch/: .gitignore  Makefile  README.md  app.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py
deepsearch/configs/: dev.ini  secret.ini
deepsearch/databases/postgresql/: 0000-create-extension.sql  0001-create-document-table.sql  0002-create-image-table.sql
deepsearch/docker/: Dockerfile  docker-compose.yml
deepsearch/scripts/: build.sh  db.json  db.py  db.sh
deepsearch/src/app/: main.py
deepsearch/src/configs/: dev.ini  secret.ini
deepsearch/src/core/: config.py
deepsearch/src/core/log/: logger.py
deepsearch/src/embedding_models/: base.py  blip_image_captioning.py  clip.py  config.py
deepsearch/src/executions/caching/: redis.py
deepsearch/src/executions/pgvector_handler/: document.txt  handler.py
deepsearch/src/llm_models/: base.py  gemini.py
deepsearch/src/llm_models/configs/: gemini.py
deepsearch/src/models/: base.py  bert.py  clip.py  utils.py
deepsearch/src/schema/: dtypes.py  journal_model.py  query_model.py
deepsearch/src/storage/: connection.py
deepsearch/src/storage/document/: handler.py  model.py
deepsearch/src/storage/image/: handler.py  model.py
deepsearch/src/types/: base.py  data_source.py  dtypes.py  local.py  media_type.py  utils.py
deepsearch/src/vector_database/: base.py  chromadb.py
deepsearch/tests/llm_models/: test_gemini.py
deepsearch/tests/types/: test_local.py
deepsearch/tests/vector_database/: test_chromadb.py
(+241 files in other folders)
