[tool.poetry]
name = "deepsearch"
version = "0.1.0"
description = "Support searching on multiple datasource"
authors = ["Nguyen Tien Thanh - Do Khai Hung"]
license = "HCMUS - 2024"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.42.4"
sentence-transformers = "^3.0.1"
langchain = "^0.2.7"
langchain-google-genai = "^1.0.7"
google-generativeai = "^0.7.2"
pytest = "^8.2.2"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
